--- a/public/CSS/detailsProduct/detailsProduct.css
+++ b/public/CSS/detailsProduct/detailsProduct.css
@@ -1,35 +1,31 @@
 @import url('generalDetailsProduct.css');
 
+
+
 .bodyDetailsProduct {
     background-color: #EAEAEA;
 }
 
 
 
+
 .header-detailsProduct {
+    position: fixed;
     width: 100%;
-    height: 165px;
-   /*  padding: 44px 25px;
-    background-color: #F40000;  */
+    height: 75px;
+     padding: 20px 30px;
+    background-color: #F40000;  
      
 }
 
-.color-container {
-   
-    
-    width: 100%;
-    height: 165px;
-    padding: 44px 25px;
-    background-color: #F40000; 
-}
+
 
 .details-main {
-    position: relative;
+    
     top: 1px;
     margin-top: 0;
     border: 1px solid rgb(224, 224, 224);
     background-color: #FFFFFF;
-    height: 2000px;
     margin: 0 auto;
     line-height: 120%
 }
@@ -39,10 +35,12 @@
     border-top-right-radius: 14px;
     background-color: #e8e8e8;
     height: 570px;
+    
 }
 
 .product-view-container {
-    padding: 15px;
+    
+    padding: 100px 15px
     
 }
 
@@ -125,9 +123,9 @@
 
 @media (min-width: 768px) {
 
-    .details-main {
+   /*  .details-main {
         height: 2211px;
-    }
+    } */
 
 
     
