--- a/public/CSS/login.css
+++ b/public/CSS/login.css
@@ -1,21 +1,24 @@
 .formulario_Login {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80vw;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px;
-    border-radius: 20px;
-    max-width: 350px;
-    margin-bottom: 110px;
+    display: block;
+   padding: 1em;
+    width: 30%;
+    height: auto;
+    margin: auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
+   border-radius: 20px;
     border: 1px solid orange;
-    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 .recordar {
     display: flex;
     justify-content:center;
+}
+
+.noTengoCuenta {
+    display: flex;
+    justify-content: center;
 }
 
 
