--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,8 +6,8 @@
                 <img src="../../images/Home/Central Music Logo.svg" alt="logo">
             </a>
             <ul class="menu-header">
-                <li><a href="">Guitars</a></li>
-                <li><a href="">Accesories</a></li>
+                <li><a href="/products/guitars">Guitars</a></li>
+                <li><a href="/products/accesories">Accesories</a></li>
                 <li><a href="">Storage</a></li>
                 <li><a href="">Lessons</a></li>
                 <li><a href="">Repairs</a></li>
