--- a/public/CSS/detailsProduct/detailsProduct.css
+++ b/public/CSS/detailsProduct/detailsProduct.css
@@ -10,10 +10,10 @@
 
 
 .header-detailsProduct {
-    position: fixed;
+    
     width: 100%;
-    height: 75px;
-     padding: 20px 30px;
+    height: 85px;
+    padding: 20px 30px;
     background-color: #F40000;  
      
 }
@@ -21,8 +21,7 @@
 
 
 .details-main {
-    
-    top: 1px;
+    height: 2000px;
     margin-top: 0;
     border: 1px solid rgb(224, 224, 224);
     background-color: #FFFFFF;
@@ -35,12 +34,13 @@
     border-top-right-radius: 14px;
     background-color: #e8e8e8;
     height: 570px;
+    margin-top: 15px;
     
 }
 
 .product-view-container {
     
-    padding: 100px 15px
+    padding: 15px
     
 }
 
@@ -123,9 +123,9 @@
 
 @media (min-width: 768px) {
 
-   /*  .details-main {
+    .details-main {
         height: 2211px;
-    } */
+    } 
 
 
     
