--- a/src/views/products/detailsProduct.ejs
+++ b/src/views/products/detailsProduct.ejs
@@ -71,8 +71,8 @@
                                 <p> <b>Modelo:</b> <%= product.model %> </p>
                                 <p><b>Orientacion de la mano:</b> <%= product.hand  %> </p>
                                 <p><b>Color:</b> <%= product.color  %> <br>
-                                <p><b>Tipo de madera del cuerpo:</b> <%= product.wood  %> </p>
-                                <p><b> Material del diapason:</b> <%= product.fretboard  %> </p>
+                                <p><b>Tipo de madera del cuerpo:</b> <%= product.materialBody  %> </p>
+                                <p><b> Material del diapason:</b> <%= product.materialFretboard  %> </p>
                                 <p><b>Acabado del cuerpo:</b> <%= product.bodyFinish  %> </p>
                             <% } else { %>
                            
