--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -2,15 +2,13 @@
 <header class="header-detailsProduct">
     <nav class="barra-navegacion">
         <div class="logo-container">
-            <a href="/">
+            <a href="/admin">
                 <img src="/images/Home/Central Music Logo.svg" alt="logo">
             </a>
             <ul class="menu-header">
                 <li><a href="/admin/products">Listado de productos</a</li>
                 <li><a href="/admin/products/guitar/add">Agregar guitarra</a></li>
                 <li><a href="/admin/products/accesory/add">Agregar accesorio</a></li>
-                <li><a href="">Lessons</a></li>
-                <li><a href="">Repairs</a></li>
             </ul>
         </div>
         <div class="menu-burger">
