--- a/src/views/admin/products/addAccesory.ejs
+++ b/src/views/admin/products/addAccesory.ejs
@@ -6,7 +6,7 @@
     <%-include('../partials/header')  %>    
     
     
-    <form action="/admin/products" method="POST" class="form-addProduct">
+    <form action="/admin/products" method="POST" enctype="multipart/form-data" class="form-addProduct">
         
         <div class="form-container1">
             <div class="new-products-separador"></div>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="input-container1 file-container">
                     <label for="image"  class="btn-file">Agregar imagenes</label>
-                    <input type="file" name="image" id="image" accept="image/png, image/jpg, image/svg" class="file">
+                    <input type="file" name="image" id="image" accept=".png, .jpg, .svg" class="file">
                     <span class="error-message1">Debes agregar una imagen</span>
                 </div>
                 <div class="input-container1">
