--- a/src/views/admin/products/editGuitar.ejs
+++ b/src/views/admin/products/editGuitar.ejs
@@ -4,7 +4,7 @@
 <body class="home-container admin-container">
     <%-include('../partials/header')  %> 
     
-    <form action="/admin/products/<%= product.id %>?_method=PUT" method="POST" class="form-addProduct">
+    <form action="/admin/products/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data" class="form-addProduct">
         
         <div class="form-container1">
             <div class="new-products-separador"></div>
@@ -62,7 +62,7 @@
                 
                 <div class="input-container1 file-container">
                     <label for="image"  class="btn-file">Agregar imagenes</label>
-                    <input type="file" name="image" id="image" accept="image/png, image/jpg, image/svg" class="file">
+                    <input type="file" name="image" id="image" accept=".png, .jpg, .svg" class="file">
                     <span class="error-message1">Debes agregar una imagen</span>
                 </div>
 
