--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -9,8 +9,10 @@
 @import url('./admin/addProduct.css');
 @import url('./admin/listProduct.css');
 /* formularios */
-@import url('./login.css');
+@import url('./login2.css');
 @import url('./registro.css');
+@import url('forms.css');
+@import url('login.css');
 /* Carrito */
 @import url('./carrito2.css');
 @import url('./home/header.css');
