--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <%-include('../partials/head',{title:'carrito'})  %>  
-<body class="home-container">
+<body class="home-container carrito-container">
     <%-include('../partials/header')  %> 
     <header class="header-container">
         
