--- a/public/CSS/login.css
+++ b/public/CSS/login.css
@@ -1,97 +1,67 @@
-.formulario_Login {
+.login-container1 .error-message1 {
+    display: none;
+}
+
+.form-login .form-container1 {
+    height: 480px;
+}
+
+.login-inputs-container{
     display: block;
-   padding: 1em;
-    width: 30%;
-    height: auto;
-    margin: auto;
-    margin-top: 10%;
-    margin-bottom: 10%;
-   border-radius: 20px;
-    border: 1px solid orange;
-    background-color: rgba(255, 255, 255, 0.9);
+
 }
 
-.recordar {
-    display: flex;
-    justify-content:center;
+.login-inputs-container .input-container1{
+    align-items: center;
 }
 
-.noTengoCuenta {
-    display: flex;
-    justify-content: center;
-}
-
-
-/* div.container section.formularioLogin form div {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    height: 30px;
+.login-inputs-container .input-style1 {
+    background: transparent;
+    outline: none;
+    border-radius: 0px;
+    border: none;
+    border-bottom: 1px solid black;
+    color: black;
+    font-size: 16px;
     
-} */
-
-
-
-
-
-.input-style {
    
-    background-color: rgba(255, 255, 255, );
+}
+
+.login-inputs-container .btn-container {
     width: 100%;
-    
+}
+
+.login-inputs-container .btn-register {
+    width: 295px;
+}
+
+.forms-body .login-container1 {
+    max-width: 450px;
+}
+
+.btn-container + .input-container1{
+    margin-top: 35px;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.login-container1 a:hover {
+    color: #FF753A;
 }
 
 
+@media (min-width: 768px) {
 
-@media screen and (min-width: 768px){ 
-    div.container section.formularioLogin h2{
-        padding-top: 30px;
+    .login-inputs-container label {
+        width: 360px;
+        font-size: 18px;
     }
 
-    div.container section.formularioLogin {
-        margin-bottom: 50px;
-        width: 80vw;
-        height: 50vh;
-        max-width: 500px;
-    }
-
-    div.container section.formularioLogin form {
-        width: 80vw;
-        height: 70vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-    }
-
-    div.container section.formularioLogin form div {
-        max-width: none;
-        max-height: none;
+    .login-inputs-container .input-style1{
+        width: 360px;
     }
     
-    div.container section.formularioLogin form div input {
-        height: 50px;
-        max-height: none;
-        width: 50vw;
-        max-width: 400px;
-        font-size: 20px;
-    }
-
-    
- 
-    
-    div.container section.formularioLogin form span {
-        margin-top: 10px;
-        font-size: 20px;
-        margin-bottom: -10px;
-    }
-    
-
-    
-}
-
-@media (min-width: 300px ) {
-    body .forms .header-detailsProduct {
-        background-color: initial;
+    .login-inputs-container .btn-register {
+        width: 360px;
     }
 }
