--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%-include('../partials/head', {title:'login'})  %> 
-<body class="forms">
-    <%-include('../partials/header')  %> 
-    <header class="header-container">
-        <div class="div-container">
-           
-            <section class="formulario_Login">
-            <h2 class="noTengoCuenta">LOGIN</h2>
-                <form action="" method="">
-                    <h3 class="noTengoCuenta">Email</h3>
-                    <div class="input-contenedor">
-                        <input type="email" class="input-style" name="email" placeholder="Ingrese su email" required>
+<%-include('../partials/head', {title: 'Login'}) %> 
+<body class="home-container forms-body admin-container form-login">
+    <%-include('../partials/header')  %>
+    <main>
+        <form action="" class="form-addProduct">
+            <div class="form-container1 login-container1">
+                <div class="new-products-separador"></div>
+                <h2>Login</h2>
+                <div class="inputs-container1 login-inputs-container">
+                    <div class="input-container1">
+                        <label for="user">Usuario</label>
+                        <input type="text" name="user" id="user" placeholder="Ingresar usuario o email" class="input-style1">
+                        <span class="error-message1 error-msg-register">Usuario o contraeña no validos</span>
                     </div>
-                    <h3 class="noTengoCuenta">Contraseña</h3>
-                    <div class="input-contenedor">
-                        <input type="password" class="input-style" name="pass" placeholder="Ingrese una contraseña" required>
-                    </div>
-                    <h3 class="noTengoCuenta">Olvidó su contraseña</h3>
-                    <div class="input_check-container">
-                        <div class="recordar">
-                        <input class="recordar" type="checkbox" name="remember">
-                        <label for="">Recordarme</label>
-                        </div>
-                        <span class="noTengoCuenta">Credenciales inválidas</span>
+                    <div class="input-container1">
+                        <label for="password">Contraseña</label>
+                        <input type="password" name="password" id="password" placeholder="Ingresar contraseña" class="input-style1">
+                        <span class="error-message1 error-msg-register">Usuario o contraeña no validos</span>
                     </div>
                     <div class="btn-container">
-                        <button type="submit" class="btn-style">Ingresar</button>
+                        <button class="btn-register" type="submit" >Ingresar</button>
                     </div>
-                </form>
-            <span><a href="/users/register" class="noTengoCuenta">No tengo cuenta</a></span>
-            </section>
-        </div>
-    </header>
+                    <div class="input-container1">
+                        <a href="">¿Olvidaste tu contraseña?</a><br>
+                        <a href="/users/register">¿No tenes cuenta?</a>
+                    </div>
+                </div>
+            </div>
+        </form>    
+    </main>
     <%-include('../partials/footer')  %> 
 </body>
 </html>
