--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,7 +4,7 @@
 <body class="home-container forms-body admin-container">
     <%-include('../partials/header') %>
         <main>
-            <form action="" class="form-addProduct">
+            <form action="/users/register" method="POST" enctype="multipart/form-data" class="form-addProduct">
                 <div class="form-container1">
                     <div class="new-products-separador"></div>
                     <h2>Registro de usuario</h2>
@@ -58,11 +58,6 @@
                 </div>
             </form>
         </main>
-
-
-
-
-
     <%-include('../partials/footer') %> 
 </body>
 </html>
