--- a/public/CSS/login.css
+++ b/public/CSS/login.css
@@ -13,6 +13,7 @@
 
 .login-inputs-container .input-container1{
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .login-inputs-container .input-style1 {
