--- a/public/CSS/login.css
+++ b/public/CSS/login.css
@@ -1,9 +1,9 @@
 .login-container1 .error-message1 {
-    display: none;
+    font-size: 14px;
 }
 
 .form-login .form-container1 {
-    height: 480px;
+    height: 530px;
 }
 
 .login-inputs-container{
@@ -48,6 +48,12 @@
 
 .login-container1 a:hover {
     color: #FF753A;
+}
+
+.remember {
+    text-align: center;
+    font-weight: 500;
+    
 }
 
 
