--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -2,7 +2,7 @@
     <div class="footer-container">
         <ul class="footer-menu-account">
             <div></div>
-            <li class="footer-account"><a href="/login">My account</a></li>
+            <li class="footer-account"><a href="/users/profile">My account</a></li>
             <li><a href="/">Overview</a></li>
             <li><a href="/">Order History</a></li>
             <li><a href="/">Wishlist</a></li>
