--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -12,13 +12,22 @@
                     <div class="input-container1">
                         <label for="user">Usuario</label>
                         <input type="text" name="user" id="user" placeholder="Ingresar usuario o email" class="input-style1">
+                        <% if (locals.errors && errors.email) { %>
+                            <small class="text-danger"><%= errors.email.msg %></small>
+                        <% } %>
                         <span class="error-message1 error-msg-register">Usuario o contraeña no validos</span>
                     </div>
                     <div class="input-container1">
                         <label for="password">Contraseña</label>
                         <input type="password" name="password" id="password" placeholder="Ingresar contraseña" class="input-style1">
+                        <% if (locals.errors && errors.password) { %>
+                            <small class="text-danger"><%= errors.password.msg %></small>
+                        <% } %>
                         <span class="error-message1 error-msg-register">Usuario o contraeña no validos</span>
                     </div>
+                    <% if (locals.errors && errors.custom) { %>
+                        <small class="text-danger"><%= errors.custom.msg %></small>
+                    <% } %>
                     <div class="btn-container">
                         <button class="btn-register" type="submit" >Ingresar</button>
                     </div>
