--- a/src/views/admin/adminIndex.ejs
+++ b/src/views/admin/adminIndex.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <%-include('partials/head')  %> 
-<body>
+<body class="home-container">
     <%-include('partials/header')  %> 
     <h1>Pagina INICIO</h1>
 </body>
