--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -12,6 +12,9 @@
                 <ul class="menu-header">
                     <li><a href="/products/guitars">Guitars</a></li>
                     <li><a href="/products/accesories">Accesories</a></li>
+                    <% if (locals.userIsLogged && locals.userLogged.category === 'admin') { %>
+                        <li><a href="/admin">Admin</a></li>
+                    <% } %>
                 </ul>
             </div>
             <div class="menu-burger">
