--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -86,64 +86,6 @@
                     </article>
             <% }) %>
         </section>   
-<<<<<<< HEAD
-            <!-- 
-                 <article>
-                <a href="">
-                    <div class="product-container">
-                        <div class="img-container">
-                            <img src="images/Home/New products/gibsonsg.svg" alt="producto-guitarra">
-                        </div>
-                        <div class="description-container">
-                            <div class="guitar-precio">
-                                <h4>Gibson SG</h4>
-                                <p>$2,995</p>
-                            </div>
-                            <p class="description">Product description here</p>
-                            <p><b>0</b> Colores available</p>
-                         </div>
-                    </div>
-                </a>
-            </article>
-            <article>
-                <a href="/">
-                    <div class="product-container">
-                        <div class="img-container">
-                            <img src="images/home/new products/stratocaster.svg" alt="producto-guitarra">
-                        </div>
-                        <div class="description-container">
-                            <div class="guitar-precio">
-                                <h4>Stratocaster</h4>
-                                <p>$2,995</p>
-                            </div>
-                            <p class="description">Product description here</p>
-                            <p><b>0</b> Colores available</p>
-                        </div>
-                    </div>
-                </a>
-            </article>
-            <article>
-                <a href="/">
-                    <div class="product-container">
-                        <div class="img-container">
-                            <img src="images/Home/New products/jaguar.svg" alt="producto-guitarra">
-                        </div>
-                        <div class="description-container">
-                            <div class="guitar-precio">
-                                <h4>Gibson SG</h4>
-                                <p>$2,995</p>
-                            </div>
-                            <p class="description">Product description here</p>
-                            <p><b>0</b> Colores available</p>
-                        </div>
-                    </div>
-                </a>
-            </article>
-            -->
-           
-        
-=======
->>>>>>> 7584abc28fbdb7a8d256a1a3d6a02ea932706f0c
         <section class="popular-finds products">
             <div class="popular-finds-separador"></div>
             <h3>Popular Finds</h3>
@@ -153,7 +95,6 @@
                         <div class="product-container">
                             <div class="img-container">
                                 <img src="images/products/<%- accesory.image %> " alt="accesorios">
-<<<<<<< HEAD
                             </div>
                             <div class="description-container">
                                 <div class="guitar-precio">
@@ -168,76 +109,6 @@
                 </article>
             <% }) %>
         </section>    
-            <!-- 
-                <article>
-                <a href="/">
-                    <div class="product-container">
-                        <div class="img-container">
-                            <img src="images/Home/Popular finds/pluggolden.svg" alt="accesorios">
-                        </div>
-                        <div class="description-container">
-                            <div class="guitar-precio">
-                                <h4>Plug Golden</h4>
-                                <p>$2,995</p>
-=======
-                            </div>
-                            <div class="description-container">
-                                <div class="guitar-precio">
-                                    <h4><%- accesory.name %> </h4>
-                                    <p>$<%- accesory.price %> </p>
-                                </div>
-                                <p class="description"><%- accesory.description %> </p>
-                                <p><b>0</b> Colores available</p>
->>>>>>> 7584abc28fbdb7a8d256a1a3d6a02ea932706f0c
-                            </div>
-                        </div>
-<<<<<<< HEAD
-                    </div>
-                </a>
-            </article>
-            <article>
-                <a href="/">
-                    <div class="product-container">
-                        <div class="img-container">
-                            <img src="images/Home/Popular finds/afinador.svg" alt="accesorios">
-                        </div>
-                        <div class="description-container">
-                            <div class="guitar-precio">
-                                <h4>Pedal Polytune Afinador</h4>
-                                <p>$2,995</p>
-                            </div>
-                            <p class="description">Product description here</p>
-                            <p><b>0</b> Colores available</p>
-                        </div>
-                    </div>
-                </a>
-            </article>
-            <article>
-                <a href="/">
-                    <div class="product-container">
-                        <div class="img-container">
-                            <img src="images/Home/Popular finds/cuerdas.svg" alt="accesorios">
-                        </div>
-                        <div class="description-container">
-                            <div class="guitar-precio">
-                                <h4>Cuerdas Ernie ball guitar</h4>
-                                <p>$2,995</p>
-                            </div>
-                            <p class="description">Product description here</p>
-                            <p><b>0</b> Colores available</p>
-                        </div>
-                    </div>
-                </a>
-            </article>
-            -->
-            
-        
-=======
-                    </a>
-                </article>
-            <% }) %>
-        </section>    
->>>>>>> 7584abc28fbdb7a8d256a1a3d6a02ea932706f0c
         <section class="other-products products">
             <div class="gear-hands-separador"></div>
             <h3>Gear Hands</h3>
@@ -310,6 +181,6 @@
     </main>
     <%-include('../partials/footer')  %> 
     
-    
+    <script src="scripts/index.js"></script>
 </body>
 </html>
