--- a/src/views/admin/products/listProducts.ejs
+++ b/src/views/admin/products/listProducts.ejs
@@ -25,10 +25,10 @@
               
                     <tr>
                         <th><a href="product/detail/<%- product.id %> "><%- product.id %></a></th>
-                        <td><a href="product/detail/<%- product.id %> "><%- product.marca %></a></td>
-                        <td><a href="product/detail/<%- product.id %> "><%- product.model %></a></td>
+                        <td><a href="product/detail/<%- product.id %> "><%- product.name %></a></td>
+                        <td><a href="product/detail/<%- product.id %> "><%- product.guitarDetails %></a></td>
                         <td><a href="product/detail/<%- product.id %> ">$<%- product.price %></a></td>
-                        <td><a href="product/detail/<%- product.id %> "><%- product.category %></a></td>
+                        <td><a href="product/detail/<%- product.id %> "><%- product.subcategory.name %></a></td>
                         <td><%- product.stock %></td>
                         <td>
 
