--- a/public/CSS/admin/addProduct.css
+++ b/public/CSS/admin/addProduct.css
@@ -1,3 +1,12 @@
+#guitar-details, #cuerda-details, #pedal-details, #cable-details{
+    display: none;
+
+}
+
+
+
+
+
 .form-addProduct {
     margin-bottom: 200px;
 }
