--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -7,7 +7,7 @@
             </a>
             <ul class="menu-header">
                 <li><a href="/admin/products">Listado de productos</a</li>
-                <li><a href="/admin/products/add">Agregar guitarra</a></li>
+                <li><a href="/admin/products/guitar/add">Agregar guitarra</a></li>
                 <li><a href="/admin/products/accesory/add">Agregar accesorio</a></li>
             </ul>
         </div>
